force-app/main/default/objects/Project_Assignment__c/fields/Roll_off_Date__c.field-meta.xml
<CustomField>
    <fullName>Roll_off_Date__c</fullName>
    <label>Roll off  Date</label>
    <type>Date</type>
</CustomField>