force-app/main/default/objects/Project_Assignment__c/validationRules/Date_should_not_be_at_the_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_should_not_be_at_the_past</fullName>
    <active>true</active>
    <errorConditionFormula>Roll_off_Date__c &lt; Project_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Roll_off_Date__c</errorDisplayField>
    <errorMessage>Roll off date cannot be greater than Project Start date</errorMessage>
</ValidationRule>