force-app/main/default/objects/Project_Assignment__c/validationRules/Employee_Assigned.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_Assigned</fullName>
    <active>true</active>
    <errorConditionFormula>Project__r.Employees_Assigned__c &gt; Project__r.Employees_Required__c</errorConditionFormula>
    <errorMessage>Employee Assigned is greater than the required Employees</errorMessage>
</ValidationRule>